nginx/nginx-svc-np.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
