nginx/nginx-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx 
  namespace: nginx
  annotations:
    ncp/rewrite_target: "/"
spec:
  rules:
  - host: nginx.armory.garreeoke.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
